--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
   <script src="https://unpkg.com/gpt-tokenizer"></script>
-  <script src="/script.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body class="bg-gray-100 min-h-screen">
   <div class="container mx-auto py-8 px-4">
